[package]
name = "rhwptopdf"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "HWP/HWPX → multi-page PDF converter library (Rust + WebAssembly)"
license = "MIT"
repository = "https://github.com/sanguneo/rhwptopdf"
readme = "README.md"
keywords = ["hwp", "hwpx", "pdf", "wasm", "korean"]
categories = ["wasm", "text-processing", "encoding"]
authors = ["sanguneo <sknah0319@gmail.com>"]

# NOTE: rhwp (Apache-2.0) is *not* a runtime dependency of this crate.
# Code from rhwp is cherry-picked into this fresh crate per the Seed contract,
# so no `path = ...` or `git = ...` dependency on rhwp must ever appear below.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
cfb = "0.14"
flate2 = "1.0"
byteorder = "1.5"
base64 = "0.22"
blake3 = "1"
zip = { version = "8.5", default-features = false, features = ["deflate"] }
quick-xml = "0.40"
codepage = "0.1.2"
embedded-io = "0.7.1"
encoding_rs = "0.8.35"
paste = "1.0.15"
snafu = "0.9.0"
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png"] }
pcx = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subsetter = "0.2"
ttf-parser = "0.25"
svg2pdf = "0.13"
usvg = "0.45"
pdf-writer = "0.12"

console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "CanvasPattern",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "TextMetrics",
    "Document",
    "Window",
    "console",
] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
toml = "0.8"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
cognitive_complexity = "allow"
needless_pass_by_value = "allow"
redundant_closure = "allow"
field_reassign_with_default = "allow"
manual_div_ceil = "allow"
manual_range_contains = "allow"
unnecessary_cast = "allow"
collapsible_if = "allow"
unnecessary_map_or = "allow"
needless_borrow = "allow"
if_same_then_else = "allow"
needless_range_loop = "allow"
option_map_or_none = "allow"
bool_comparison = "allow"
collapsible_else_if = "allow"
collapsible_match = "allow"
needless_borrows_for_generic_args = "allow"
vec_init_then_push = "allow"
single_match = "allow"
match_like_matches_macro = "allow"
useless_format = "allow"
derivable_impls = "allow"
redundant_pattern_matching = "allow"
iter_cloned_collect = "allow"
manual_clamp = "allow"
manual_saturating_arithmetic = "allow"
manual_rem_euclid = "allow"
manual_strip = "allow"
manual_is_ascii_check = "allow"
clone_on_copy = "allow"
explicit_into_iter_loop = "allow"
needless_lifetimes = "allow"
filter_map_identity = "allow"
ptr_arg = "allow"
should_implement_trait = "allow"
new_without_default = "allow"
assign_op_pattern = "allow"
blocks_in_conditions = "allow"
enum_variant_names = "allow"
repeat_vec_with_capacity = "allow"
manual_repeat_n = "allow"
useless_conversion = "allow"
same_item_push = "allow"
nonminimal_bool = "allow"
implicit_saturating_sub = "allow"
unused_enumerate_index = "allow"
unnecessary_filter_map = "allow"
manual_pattern_char_comparison = "allow"
large_enum_variant = "warn"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"
unused_assignments = "allow"
unused_macros = "allow"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("tracing", "svg"))'] }

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
